# mizukage

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml  publish.yml
doc/: api-reference.md  architecture.md  camera-hardware.md  cli-reference.md  format-lri.md  format-lris.md  format-pixels.md  index.md  protobuf-schema.md  quickstart.md
doc/internal/: explorer-plan.md
known-documentation/: calibration-data-applications.md  calibration-data-guide.md  denoising-networks.md  next-steps.md  scene-reconstruction.md  shader-denoising.md
mizukage/: __init__.py  _calib.py  _denoise.py  _image.py  _lri.py  _lris.py  _proto.py
mizukage/calib_viewer/: __init__.py  _color.py  _data.py  _geometry.py  _hotpixels.py  _layout.py  _noise.py  _vignetting.py
mizukage/cli/: main.py
mizukage/cli/commands/: calib.py  calib_view.py  export.py  extract.py  info.py
mizukage/proto/: __init__.py  camera_id_pb2.py  face_data_pb2.py  geometric_calibration_pb2.py  gps_data_pb2.py  hot_pixel_map_pb2.py  imu_data_pb2.py  lightheader_pb2.py  matrix4x4f_pb2.py  point2f_pb2.py  rectanglei_pb2.py  time_stamp_pb2.py  vignetting_characterization_pb2.py
scripts/: compile_protos.py
shadow/: __init__.py  _block.py  _calib.py  _debayer.py  _denoise.py  _image.py  _lri.py  _proto.py  _types.py  _unpack.py
shadow/calib_viewer/: __init__.py  _color.py  _data.py  _geometry.py  _hotpixels.py  _layout.py  _noise.py  _vignetting.py
shadow/cli/: main.py
shadow/cli/commands/: calib_view.py  export.py  info.py
shadow/proto/: camera_module_pb2.py  color_calibration_pb2.py  dead_pixel_map_pb2.py  device_temp_pb2.py  distortion_pb2.py  flash_calibration_pb2.py  hw_info_pb2.py  matrix3x3f_pb2.py  mirror_system_pb2.py  point2i_pb2.py  point3f_pb2.py  proximity_sensors_pb2.py  range2f_pb2.py  sensor_characterization_pb2.py  sensor_type_pb2.py  tof_calibration_pb2.py  view_preferences_pb2.py
