[project]
name = "mizukage"
version = "0.1.0"
description = "Library and tools for reading Light L16 LRI camera files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "protobuf>=5.0",
    "Pillow>=10.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["grpcio-tools>=1.50"]
# High-quality Bayer demosaicing algorithms (Malvar2004, Menon2007, DDFAPD).
# Pulls in colour-science and scipy (~50 MB).
demosaic = ["colour-demosaicing>=0.2.7"]
# BM3D denoising (Block Matching 3D) — state-of-the-art classical denoiser (~5 MB).
denoise = [
    "bm3d>=4.0",
]
# GPU-accelerated denoising via kornia + deepinv + PyTorch.
# Includes bilateral filter, DnCNN (blind CNN), and DRUNet (sigma-aware U-Net).
# Works on NVIDIA CUDA, AMD ROCm, DirectML (Windows), Apple MPS, and CPU.
# DnCNN / DRUNet download pretrained weights (~3 MB / ~37 MB) on first use.
denoise-gpu = ["kornia>=0.7", "torch>=2.0", "deepinv>=0.2"]
# Interactive calibration data viewer (requires a display).
explorer = [
    "dearpygui>=1.11",
]

[project.scripts]
mizukage = "mizukage.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
